--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <main class="container mx-auto mt-28 px-5 flex">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/ideas">Ideas</a>
+        <a class="nav-link" href="/nebula_thoughts">Nebula Thoughts</a>
       </li>
       <p class="navbar-text float-right">
       <% if user_signed_in? %>
