Cloudinary Images Working and Combined with Active Storage
Cloudinary image pulling from a sample media library in Cloudinary, image
exists within the homepage in a new Cloudinary image helper code block.

Installed Active Storage and subsequently performed a databse migration.
Performed due to an association needing to be created between Cloudinary file uploads
and the Nebula model (and other models also possibly going forward).

Storage yml file and development environment files updated to use Cloudinary
rather than local storage.

Added to the Nebula model the association of one photo to be attached.

--- a/app/views/nebula/home.html.erb
+++ b/app/views/nebula/home.html.erb
@@ -1,2 +1,4 @@
-<%= image_tag "nebula.jpg" %>
 <h1>Nebula Home</h1>
+<%= cl_image_tag("samples/landscapes/landscape-panorama",
+      width: 400, height: 300, crop: :fill) %>
+<%= image_tag "nebula.jpg" %>
