Nebula Thoughts Implemented, Tailwind Flowbite Cards also
Nebula Thoughts added to the navbar, Nebula Thoughts simultaneously added which is
a page with room for experimentation with the new cards(just as the application is).

Tailwind Flowbite cards added to the application for the Nebula thoughts page.
Relevant terminology text in the cards added to the application and lorem ipsum with it.

CSS added into the base CSS application file for the newly introduced Nebula cards.

Nebula controller added to with show and thoughts actions.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+ .nebula {
+  background-color: #f9f9f9;
+  padding: 20px; /* Add some padding for spacing */
+}
+
+.nebula h1 {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #333;
+}
