--- a/app/views/nebula/home.html.erb
+++ b/app/views/nebula/home.html.erb
@@ -8,3 +8,37 @@
     :border=>"6px_solid_lightblue",
   :fallback_content => "Your browser does not support HTML5 video tags." ) %>
 <%= image_tag "nebula.jpg" %>
+
+<div data-controller="reveal" data-reveal-hidden-class="d-none">
+  <button data-action="click->reveal#toggle" type="button" class="btn">Toggle me!</button>
+
+  <p data-reveal-target="item" class="d-none mt-4">Hey 👋</p>
+  <p data-reveal-target="item" class="d-none mt-4">You can have multiple items</p>
+</div>
+
+<div data-controller="reveal">
+  <button data-action="click->reveal#show" type="button" class="btn">Show me!</button>
+
+  <p data-reveal-target="item" class="hidden mt-4">Hey 👋</p>
+</div>
+
+<div data-controller="reveal">
+  <button data-action="click->reveal#hide" type="button" class="btn">Hide me!</button>
+
+  <p data-reveal-target="item" class="mt-4">Hey 👋</p>
+</div>
+
+<div data-controller="tabs" data-tabs-default-tab-value="two">
+  <button type="button" id="one" data-tabs-target="btn" data-action="click->tabs#select">Nebula</button>
+  <button type="button" id="two" data-tabs-target="btn" data-action="click->tabs#select">Galaxy</button>
+  <button type="button" id="abc" data-tabs-target="btn" data-action="click->tabs#select">Comet</button>
+  <div data-tabs-target="tab" id="one">
+    Boomerang, Emission, Planetary
+  </div>
+  <div data-tabs-target="tab" id="two">
+    Andromeda, Milky Way
+  </div>
+  <div data-tabs-target="tab" id="abc">
+    Chiron, Hyakutake
+  </div>
+</div>
