Standard CSS Added for Astro Images in new CSS File
Added a new astro__images CSS file that is called within
the application.html.erb view file to provide custom styling
to the astro_images index and also the new astro_images creation
form page. These include incorporating a grid system and hover
over a record styling properties.

Also uncommented and installed the Image Processing gem for
making variants to Active Storage added images in the future.

--- a/app/views/astro_images/index.html.erb
+++ b/app/views/astro_images/index.html.erb
@@ -3,7 +3,7 @@
 <p>Images of Astrology from our Users</p>
 <% @astro_images.each do |image| %>
   <div class="astro-image">
-    <%= image_tag image.image, alt: image.title %>
+    <%= image_tag image.image, alt: image.title, loading: "lazy" %>
     <p><strong><%= image.title %></strong></p>
     <p><%= image.description %></p>
   </div>
