Added Astro Images Show Page and Links to the First Blob
Added show action to the astro_images controller.

Added a new astro_images show page and link to via the entirety of the blob
record for each index astro_images image.

Show page features same information and image as that of an image in the astro_images
index view page.

--- a/app/views/astro_images/index.html.erb
+++ b/app/views/astro_images/index.html.erb
@@ -3,8 +3,10 @@
 <p>Images of Astrology from our Users</p>
 <% @astro_images.each do |image| %>
   <div class="astro-image">
-    <%= image_tag image.image, alt: image.title, loading: "lazy" %>
-    <p><strong><%= image.title %></strong></p>
-    <p><%= image.description %></p>
+    <%= link_to astro_image_path(image.image) do %>
+      <%= image_tag image.image, alt: image.title, loading: "lazy" %>
+      <p><strong><%= image.title %></strong></p>
+      <p><%= image.description %></p>
   </div>
+  <% end %>
 <% end %>
