simple_calendar Gem Setup and Implementation into the Homepage
Latest version of the simple_calendar gem added to the application,
added it to the homepage view.

Created a meeting model and pages controller to handle the calendar implementation.

The homepage now shows a calendar where likely in the next PR users will be able
to select a day from the calendar and create a meeting.

Commented out meeting path link in the month_calendar partial until this is
initialised and the relevant view created in the future.

--- a/app/views/nebulae/home.html.erb
+++ b/app/views/nebulae/home.html.erb
@@ -11,6 +11,19 @@
 
 <%= link_to 'Supernovae Index', supernovae_index_path %>
 
+<div class="calendar-container">
+  <%= month_calendar(events: @meetings, end_attribute: :end_time) do |date, meetings| %>
+    <%= date %>
+
+    <% meetings.each do |meeting| %>
+      <div class="meeting">
+        <p><%= meeting.name %></p>
+        <small><%= meeting.time unless meeting.multi_days? %></small>
+      </div>
+    <% end %>
+  <% end %>
+</div>
+
 <div data-controller="reveal" data-reveal-hidden-class="d-none">
   <button data-action="click->reveal#toggle" type="button" class="btn">Toggle me!</button>
 
